--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -16,16 +14,36 @@
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
+      
       <a-entity mindar-image-target="targetIndex: 0">
-        <a-gltf-model rotation="0 0 0 " position="0 0 0" scale="0.7 0.7 0.7" src="#WhaleO3" animation-mixer>
+        <a-gltf-model 
+          src="#WhaleO3"
+          position="0 0 0"
+          scale="0.7 0.7 0.7"
+          rotation="0 0 0"
+          animation-mixer
+          
+          animation__updown="property: position; to: 0 0.3 0; dur: 2000; easing: easeInOutSine; loop: true; dir: alternate"
+          animation__spin="property: rotation; to: 0 360 0; dur: 6000; loop: true; easing: linear">
+        </a-gltf-model>
       </a-entity>
+
+  
       <a-entity mindar-image-target="targetIndex: 1">
-        <a-gltf-model rotation="0 0 0 " position="0 -0.25 0" scale="0.05 0.05 0.05" src="#OctupusO3" animation-mixer>
+        <a-gltf-model 
+          src="#OctupusO3"
+          position="0 -0.25 0"
+          scale="0.05 0.05 0.05"
+          rotation="0 0 0"
+          animation-mixer
+
+          animation__updown="property: position; to: 0 0.2 0; dur: 2500; easing: easeInOutSine; loop: true; dir: alternate"
+          animation__spin="property: rotation; to: 0 360 0; dur: 8000; loop: true; easing: linear">
+        </a-gltf-model>
       </a-entity>
     </a-scene>
   </body>
 </html>
-
 
 
 
