--- a/index.html
+++ b/index.html
@@ -3,8 +3,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
+    <style>
+      #message {
+        position: fixed;
+        top: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        background: rgba(0, 0, 0, 0.7);
+        color: white;
+        padding: 10px 20px;
+        border-radius: 10px;
+        font-family: sans-serif;
+        display: none;
+        z-index: 999;
+      }
+    </style>
   </head>
   <body>
+    <div id="message"></div>
+
     <a-scene
       mindar-image="imageTargetSrc: ./targets.mind; maxTrack: 2"
       color-space="sRGB"
@@ -13,14 +30,13 @@
       device-orientation-permission-ui="enabled: false"
     >
       <a-assets>
-        <!-- Modelos -->
         <a-asset-item id="WhaleModel" src="./WhaleO1.glb"></a-asset-item>
         <a-asset-item id="OctopusModel" src="./Octopus.glb"></a-asset-item>
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-      <!-- Target 0 -->
+      <!-- Target -->
       <a-entity id="target-0" mindar-image-target="targetIndex: 0">
         <a-gltf-model
           id="model-interactive"
@@ -38,33 +54,45 @@
     <script>
       const model = document.querySelector("#model-interactive");
       const target = document.querySelector("#target-0");
+      const messageBox = document.querySelector("#message");
 
       let showingWhale = true;
 
-      // --- 1) Cambiar modelo al hacer clic ---
+      // --- Cambiar modelo al hacer clic ---
       model.addEventListener("click", () => {
         if (showingWhale) {
           model.setAttribute("src", "#OctopusModel");
           model.setAttribute("scale", "0.05 0.05 0.05");
           model.setAttribute("position", "0 -0.25 0");
+          showMessage("🐙 Ahora es el pulpo");
         } else {
           model.setAttribute("src", "#WhaleModel");
           model.setAttribute("scale", "0.7 0.7 0.7");
           model.setAttribute("position", "0 0 0");
+          showMessage("🐳 Ahora es la ballena");
         }
         showingWhale = !showingWhale;
       });
 
-      // --- 2) Eventos de MindAR (targetFound / targetLost) ---
+      // --- Eventos de MindAR ---
       target.addEventListener("targetFound", () => {
-        console.log("Target encontrado");
-        alert("Se detectó el marcador, aparece el modelo ");
+        console.log("✅ Target encontrado");
+        showMessage("Marcador detectado ✅");
       });
 
       target.addEventListener("targetLost", () => {
-        console.log("Target perdido");
-        alert("El marcador ya no está visible");
+        console.log("❌ Target perdido");
+        showMessage("Marcador perdido ❌");
       });
+
+      // --- Función para mostrar mensajes sin bloquear ---
+      function showMessage(text) {
+        messageBox.innerText = text;
+        messageBox.style.display = "block";
+        setTimeout(() => {
+          messageBox.style.display = "none";
+        }, 2000); // desaparece en 2s
+      }
     </script>
   </body>
 </html>
