--- a/index.html
+++ b/index.html
@@ -36,63 +36,63 @@
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-      <!-- Target -->
+      <!-- Target 0: Ballena -->
       <a-entity id="target-0" mindar-image-target="targetIndex: 0">
         <a-gltf-model
-          id="model-interactive"
+          id="model-whale"
           src="#WhaleModel"
           rotation="0 0 0"
           position="0 0 0"
           scale="0.7 0.7 0.7"
           animation__updown="property: position; to: 0 0.3 0; dur: 2000; easing: easeInOutSine; loop: true; dir: alternate"
           animation__spin="property: rotation; to: 0 360 0; dur: 5000; loop: true; easing: linear"
-        >
-        </a-gltf-model>
+        ></a-gltf-model>
+      </a-entity>
+
+      <!-- Target 1: Pulpo -->
+      <a-entity id="target-1" mindar-image-target="targetIndex: 1">
+        <a-gltf-model
+          id="model-octopus"
+          src="#OctopusModel"
+          rotation="0 0 0"
+          position="0 -0.25 0"
+          scale="0.05 0.05 0.05"
+          animation__updown="property: position; to: 0 0.1 0; dur: 1500; easing: easeInOutSine; loop: true; dir: alternate"
+          animation__spin="property: rotation; to: 0 360 0; dur: 4000; loop: true; easing: linear"
+        ></a-gltf-model>
       </a-entity>
     </a-scene>
 
     <script>
-      const model = document.querySelector("#model-interactive");
-      const target = document.querySelector("#target-0");
       const messageBox = document.querySelector("#message");
+      const target0 = document.querySelector("#target-0");
+      const target1 = document.querySelector("#target-1");
 
-      let showingWhale = true;
-
-      // --- Cambiar modelo al hacer clic ---
-      model.addEventListener("click", () => {
-        if (showingWhale) {
-          model.setAttribute("src", "#OctopusModel");
-          model.setAttribute("scale", "0.05 0.05 0.05");
-          model.setAttribute("position", "0 -0.25 0");
-          showMessage("🐙 Ahora es el pulpo");
-        } else {
-          model.setAttribute("src", "#WhaleModel");
-          model.setAttribute("scale", "0.7 0.7 0.7");
-          model.setAttribute("position", "0 0 0");
-          showMessage("🐳 Ahora es la ballena");
-        }
-        showingWhale = !showingWhale;
+      // Eventos para target 0 (Ballena)
+      target0.addEventListener("targetFound", () => {
+        showMessage("🐳 Se detectó el marcador de la Ballena");
+      });
+      target0.addEventListener("targetLost", () => {
+        showMessage("🐳 Marcador de la Ballena perdido");
       });
 
-      // --- Eventos de MindAR ---
-      target.addEventListener("targetFound", () => {
-        console.log("✅ Target encontrado");
-        showMessage("Marcador detectado ✅");
+      // Eventos para target 1 (Pulpo)
+      target1.addEventListener("targetFound", () => {
+        showMessage("🐙 Se detectó el marcador del Pulpo");
+      });
+      target1.addEventListener("targetLost", () => {
+        showMessage("🐙 Marcador del Pulpo perdido");
       });
 
-      target.addEventListener("targetLost", () => {
-        console.log("❌ Target perdido");
-        showMessage("Marcador perdido ❌");
-      });
-
-      // --- Función para mostrar mensajes sin bloquear ---
+      // Función para mostrar mensajes sin bloquear
       function showMessage(text) {
         messageBox.innerText = text;
         messageBox.style.display = "block";
         setTimeout(() => {
           messageBox.style.display = "none";
-        }, 2000); // desaparece en 2s
+        }, 2000);
       }
     </script>
   </body>
 </html>
+
